--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "css-loader": "^6.7.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "framer-motion": "^8.4.2",
     "mongoose": "^6.8.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
